syntax = "proto3";

package ProtoMeasX;

message Position
{
    double x = 1;
    double y = 2;
    double z = 3;
}

message Bearing
{
    double az = 1;
    double el = 2;
}

message Measurements
{
    uint32 num_feature_points = 1;
    repeated Position feature_points = 2;
    repeated Bearing bearings = 3;
}

message Attitude
{
    double qw = 1;
    double qx = 2;
    double qy = 3;
    double qz = 4;
}

message Pose
{
    Position pos = 1;
    Attitude att = 2;
    double time_stamp = 3;
}

message MeasurementX
{
    oneof meastype{
        Pose pose = 1;
        Measurements measurements = 2;
    }
}